--- a/css/styles.css
+++ b/css/styles.css
@@ -119,6 +119,119 @@ select:-webkit-autofill:focus {
   margin-right: auto;
 }
 
+/* LOGO */
+.logo {
+  display: inline-block;
+}
+
+.logo:hover {
+  opacity: 0.8;
+}
+
+.logo:active {
+  opacity: 0.6;
+}
+
+.logo__img {
+  display: block;
+  width: 139px;
+  height: 20px;
+  object-fit: contain;
+}
+
+
+/* SITENAV */
+.sitenav__list {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  font-size: 14px;
+  line-height: normal;
+}
+
+.sitenav__item {
+  position: relative;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.sitenav__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.sitenav__link {
+  display: block;
+  text-decoration: none;
+  color: var(--grey);
+}
+
+.sitenav__link:hover {
+  color: var(--black);
+}
+
+.sitenav__link::after {
+  position: absolute;
+  display: none;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  background-color: var(--green);
+  background-image: var(--gradient);
+  content: "";
+}
+
+.sitenav__link:hover::after {
+  display: block;
+}
+
+
+/* BUTTON */
+.button {
+  position: relative;
+  display: inline-block;
+  padding: 8px 34px;
+  border-radius: 22px;
+  font-size: 14px;
+  line-height: 28px;
+  font-weight: 500;
+  background-color: var(--green);
+  background-image: var(--gradient);
+  color: #fff;
+  text-decoration: none;
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+.button:hover::after {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 22px;
+  background-color: rgba(255, 255, 255, 0.4);
+  content: "";
+}
+
+.button:active {
+  transform: translateY(2px);
+}
+
+/* SITE-HEADER */
+.site-header {
+  position: relative;
+  z-index: 50;
+  background-color: #fff;
+}
+
+.site-header__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 /* MAIN-CONTENT */
 .main-content {
