--- a/css/styles.css
+++ b/css/styles.css
@@ -220,6 +220,79 @@ select:-webkit-autofill:focus {
   transform: translateY(2px);
 }
 
+/* ARTICLES-GRID */
+.article-cards-grid {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  margin-left: -30px;
+  list-style: none;
+}
+
+.article-cards-grid__item {
+  width: 100%;
+  max-width: 255px;
+  margin-left: 30px;
+}
+
+
+/* ARTICLE-CARD */
+.article-card {
+  border-radius: 5px;
+  background-color: #fff;
+  overflow: hidden;
+}
+
+.article-card__img {
+  display: block;
+  width: 255px;
+  height: 200px;
+  object-fit: cover;
+}
+
+.article-card__content {
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+}
+
+.article-card__title {
+  margin-top: 0;
+  margin-bottom: 8px;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 100;
+}
+
+.article-card__link {
+  display: inline-block;
+  color: var(--black);
+  text-decoration: none;
+}
+
+.article-card__link:hover {
+  color: var(--green);
+}
+
+.article-card__link:active {
+  opacity: 0.6;
+}
+
+.article-card__author {
+  order: -1;
+  margin-top: 0;
+  margin-bottom: 8px;
+  font-size: 10px;
+  line-height: 18px;
+}
+
+.article-card__excerpt {
+  margin: 0;
+  font-size: 13px;
+  line-height: 18px;
+}
+
 /* SITE-HEADER */
 .site-header {
   position: relative;
@@ -361,6 +434,21 @@ select:-webkit-autofill:focus {
 
 .feature__description {
   margin: 0;
+}
+
+/* INDEX-ARTICLES */
+.index-articles {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.index-articles__title {
+  margin-top: 0;
+  margin-bottom: 40px;
+  font-size: 40px;
+  line-height: 64px;
+  font-weight: 100;
+  color: var(--black);
 }
 
 
