Add site footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -293,6 +293,32 @@ select:-webkit-autofill:focus {
   line-height: 18px;
 }
 
+/* SOCIALS */
+.socials {
+  display: flex;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.socials__item:not(:last-child) {
+  margin-right: 13px;
+}
+
+.socials__link {
+  display: flex;
+  color: #fff;
+}
+
+.socials__link:hover {
+  color: var(--green);
+}
+
+.socials__link:active {
+  opacity: 0.6;
+}
+
 /* SITE-HEADER */
 .site-header {
   position: relative;
@@ -438,7 +464,7 @@ select:-webkit-autofill:focus {
 
 /* INDEX-ARTICLES */
 .index-articles {
-  padding-top: 80px;
+  padding-top: 85px;
   padding-bottom: 80px;
 }
 
@@ -449,6 +475,79 @@ select:-webkit-autofill:focus {
   line-height: 64px;
   font-weight: 100;
   color: var(--black);
+}
+
+/* SITE-FOOTER */
+.site-footer {
+  padding-top: 48px;
+  padding-bottom: 48px;
+  background-color: var(--black);
+  color: #fff;
+}
+
+.site-footer__container {
+  display: flex;
+}
+
+.site-footer__logo-socials {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+  max-width: 160px;
+  margin-right: 130px;
+}
+
+.site-footer__logo {
+  margin-bottom: 24px;
+}
+
+.site-footer__links-warpper {
+  display: flex;
+  margin-right: auto;
+}
+.site-footer__links {
+  width: 160px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.site-footer__links:not(:last-child) {
+  margin-right: 30px;
+}
+
+.site-footer__links-item:not(:last-child) {
+margin-bottom: 8px;
+}
+
+.site-footer__links-link {
+  display: block;
+  color: #fff;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+
+.site-footer__links-link:hover {
+  color: var(--green);
+}
+
+.site-footer__links-link:active {
+  opacity: 0.6;
+}
+
+.site-footer__cta-copy {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+  text-align: right;
+}
+.site-footer__copy {
+  margin: 0;
+  font-size: 15px;
+  line-height: 25px;
+  color: rgb(255, 255, 255, 0.5);
 }
 
 
